syntax = "proto3";

package shared;

import "continuedb/globalpb/data.proto";

service Shared {
    rpc Share(Request) returns (Response);
}

message Node {
    int64 high_water_stamp = 2;
    uint32 min_hops = 3;
}

// Info is shared by Shared.
message Info {
    globalpb.Value value = 1;
    int64 ttl_stamp = 2;
    int64 orig_stamp = 3;
    uint32 hops = 4;
    // Node id which the Info originated.
    uint64 node_id = 5;
    // Node id which the Info last passed.
    uint64 peer_id = 6;
}

message Request {
    // the sender's meta
    globalpb.NodeMeta node_meta = 2;
    map<string, Info> delta = 3;
    map<uint64, Node> nodes = 4;
}

message Response {
    uint64 node_id = 1;
    globalpb.NodeMeta alter_node = 2;
    map<string, Info> delta = 3;
    map<uint64, Node> nodes = 4;
}
